--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header class="header">
         <div class="container header__container">
             <div class="header__logo">
-                <img src="https://placehold.co/120x40/2134A0/white?text=СОМИ" alt="Логотип СОМИ" class="header__logo-img">
+                <img src="assets/logos/somi.png" alt="Логотип СОМИ" class="header__logo-img">
             </div>
             <nav class="header__nav" id="mainNav">
                 <ul class="nav__list">
@@ -33,6 +33,9 @@
                 <span class="burger__line"></span>
                 <span class="burger__line"></span>
             </button>
+            <div class ="container header__container">
+                <img src="assets/logos/forum.eps" alt="логотип основа" class="header__logo-img">
+            </div>
         </div>
     </header>
 
@@ -48,10 +51,10 @@
                 </div>
                 <a href="https://forms.yandex.ru/u/698b055090fa7bb820545f21" class="btn btn--primary" target="_blank">Зарегистрироваться</a>
                 <div class="hero__logos">
-                    <img src="https://placehold.co/100x50/2134A0/white?text=СОМИ" alt="АНО СОМИ" class="hero__logo">
-                    <img src="https://placehold.co/100x50/242424/white?text=Минрег" alt="Министерство региональной политики" class="hero__logo">
-                    <img src="https://placehold.co/100x50/DE2726/white?text=Минпрос" alt="Министерство просвещения" class="hero__logo">
-                    <img src="https://placehold.co/100x50/2134A0/white?text=НГУЭУ" alt="НГУЭУ" class="hero__logo">
+                    <img src="assets/logos/somi.png" alt="АНО СОМИ" class="hero__logo">
+                    <img src="assets/logos/MinReg.jpg" alt="Министерство региональной политики" class="hero__logo">
+                    <img src="assets/logos/MinObr.jpg" alt="Министерство образования" class="hero__logo">
+                    <img src="assets/logos/NGYEY.png" alt="НГУЭУ" class="hero__logo">
                 </div>
             </div>
         </section>
