--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header class="header">
         <div class="container header__container">
             <div class="header__logo">
-                <img src="assets/logos/somi.png" alt="Логотип СОМИ" class="header__logo-img">
+                <img src="assets/logos/forum.png" alt="Логотип форум" class="header__logo-img--large">
             </div>
             <nav class="header__nav" id="mainNav">
                 <ul class="nav__list">
@@ -33,9 +33,6 @@
                 <span class="burger__line"></span>
                 <span class="burger__line"></span>
             </button>
-            <div class ="container header__container">
-                <img src="assets/logos/forum.eps" alt="логотип основа" class="header__logo-img">
-            </div>
         </div>
     </header>
 
@@ -210,17 +207,17 @@
                 <h2 class="section__title">Новости и обновления</h2>
                 <div class="news__grid">
                     <div class="news-card">
-                        <div class="news-card__date">15 апреля 2025</div>
+                        <div class="news-card__date">15 апреля 2026</div>
                         <h3 class="news-card__title">Открыта регистрация на форум</h3>
                         <p class="news-card__excerpt">Приглашаем всех желающих принять участие в мероприятиях форума. Регистрация открыта до 30 апреля.</p>
                     </div>
                     <div class="news-card">
-                        <div class="news-card__date">10 апреля 2025</div>
+                        <div class="news-card__date">10 апреля 2026</div>
                         <h3 class="news-card__title">Определены площадки проведения</h3>
                         <p class="news-card__excerpt">Форум пройдет на базе 10 образовательных организаций Новосибирской области.</p>
                     </div>
                     <div class="news-card">
-                        <div class="news-card__date">1 апреля 2025</div>
+                        <div class="news-card__date">1 апреля 2026</div>
                         <h3 class="news-card__title">Состав экспертов пополняется</h3>
                         <p class="news-card__excerpt">К участию в форуме присоединились ведущие эксперты в области межкультурной коммуникации.</p>
                     </div>
@@ -238,15 +235,14 @@
                         <p class="contact-info__text">АНО «Сибирское общество международных исследований»</p>
                     </div>
                     <div class="contact-info">
-                        <h3 class="contact-info__title">Email</h3>
-                        <p class="contact-info__text"><a href="mailto:info@somi.ru" class="contact-info__link">info@somi.ru</a></p>
+                        <h3 class="contact-info__title"></h3>
+                        <p class="contact-info__text"><a href="" class="contact-info__link"></a></p>
                     </div>
                     <div class="contact-info">
                         <h3 class="contact-info__title">Социальные сети</h3>
                         <div class="social-links">
-                            <a href="#" class="social-link" aria-label="ВКонтакте"><i class="fab fa-vk"></i></a>
-                            <a href="#" class="social-link" aria-label="Telegram"><i class="fab fa-telegram-plane"></i></a>
-                            <a href="#" class="social-link" aria-label="YouTube"><i class="fab fa-youtube"></i></a>
+                            <a href="https://vk.com/somi_sirs_novosibirsk" class="social-link" aria-label="ВКонтакте"><i class="fab fa-vk"></i></a>
+                            <a href="https://t.me/somi_sirsnsk" class="social-link" aria-label="Telegram"><i class="fab fa-telegram-plane"></i></a>
                         </div>
                     </div>
                 </div>
@@ -256,7 +252,7 @@
 
     <footer class="footer">
         <div class="container footer__container">
-            <p class="footer__text">© 2025 АНО «Сибирское общество международных исследований». Все права защищены.</p>
+            <p class="footer__text">© 2026 АНО «Сибирское общество международных исследований». Все права защищены.</p>
             <p class="footer__text">Проект реализуется при поддержке Правительства Новосибирской области</p>
         </div>
     </footer>
