--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <!-- Подключение Font Awesome для иконок -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/png" href="assets/logos/logo.png">
 </head>
 <body>
     <!-- Header с навигацией -->
@@ -43,16 +44,10 @@
                 <h1 class="hero__title">Региональный научно-просветительский форум<br>«Новосибирская область — пространство диалога культур»</h1>
                 <p class="hero__subtitle">Научно-просветительский форум, направленный на развитие межкультурного диалога, формирование ценностных ориентиров молодежи и расширение образовательных гуманитарных практик в сфере традиционных духовно-нравственных ценностей России. Приурочен к Году единства народов России.</p>
                 <div class="hero__info">
-                    <p class="hero__date"><i class="fas fa-calendar-alt"></i> 2025 год</p>
+                    <p class="hero__date"><i class="fas fa-calendar-alt"></i> 2026 год</p>
                     <p class="hero__location"><i class="fas fa-map-marker-alt"></i> 10 дискуссионных площадок на базе образовательных организаций Новосибирской области</p>
                 </div>
                 <a href="https://forms.yandex.ru/u/698b055090fa7bb820545f21" class="btn btn--primary" target="_blank">Зарегистрироваться</a>
-                <div class="hero__logos">
-                    <img src="assets/logos/somi.png" alt="АНО СОМИ" class="hero__logo">
-                    <img src="assets/logos/MinReg.jpg" alt="Министерство региональной политики" class="hero__logo">
-                    <img src="assets/logos/MinObr.jpg" alt="Министерство образования" class="hero__logo">
-                    <img src="assets/logos/NGYEY.png" alt="НГУЭУ" class="hero__logo">
-                </div>
             </div>
         </section>
 
